🐛 Added overflow-x hidden to html and body to prevent horizontal scroll bar (#22)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,3 +17,8 @@
        url('/fonts/roboto-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('/fonts/roboto-v20-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
+
+html,
+body {
+    overflow-x: hidden;
+}
